# 2ZadacaIzSpaCmake

./: CMakeLists.txt
